# docgen-sdks

./: .gitignore  LICENSE  README.md  RELEASING.md  glama.json
.github/workflows/: ci-dotnet.yml  ci-java.yml  ci-php.yml  ci-python.yml  ci-typescript.yml  release-dotnet.yml  release-java.yml  release-python.yml  release-typescript.yml  sync-php-subtree.yml
dotnet/: README.md
dotnet/examples/: Quickstart.cs
dotnet/src/DocGen/: DocGen.csproj  DocGenClient.cs  DocGenConfig.cs
java/: README.md  pom.xml
java/examples/: QuickstartExample.java
mcp/: README.md  pyproject.toml  server.json
mcp/src/docgen_mcp/: __init__.py  server.py
php/: README.md  composer.json
php/examples/: quickstart.php
php/src/: DocGen.php  DocGenConfig.php
php/src/Builder/: ComposeBuilder.php  DocumentBuilder.php  InvoiceBuilder.php
php/src/Client/: DocumentsClient.php  ExcelClient.php  FontsClient.php  PdfFormsClient.php  PdfToolsClient.php  PreviewClient.php  ReceiptsClient.php  SignaturesClient.php  TemplatesClient.php  XRechnungClient.php  ZugferdClient.php
php/src/Exception/: ApiException.php  AuthenticationException.php  ConflictException.php  DocGenException.php  NotFoundException.php  RateLimitException.php  ServerException.php  ServiceUnavailableException.php  ValidationException.php
php/src/Internal/: FileUtils.php  Serializer.php  Transport.php
php/src/Model/: BankAccount.php  BarcodeFormat.php  ColumnDef.php  ComposeRequest.php  ContentArea.php  DocumentPart.php  DocumentRequest.php  ExtractionResult.php  HeaderFooterConfig.php  ImageData.php  InvoiceData.php  InvoiceItem.php  InvoiceUnit.php  JobInfo.php  JobStatus.php  OutputFormat.php  PageOrientation.php  PageSettings.php  PaperSize.php  Party.php  QrCodeData.php  StationeryConfig.php  TableData.php  TextAlignment.php  VisibleSignatureConfig.php  WatermarkConfig.php  WebhookPayload.php  XRechnungFormat.php  ZugferdProfile.php
php/src/Webhook/: WebhookVerifier.php
plugin/: .mcp.json  README.md
plugin/.claude-plugin/: plugin.json
plugin/skills/docgen/: SKILL.md
plugin/skills/dokmatiq-docgen/: SKILL.md
python/: README.md  pyproject.toml
python/examples/: async_example.py  quickstart.py
python/src/docgen/: __init__.py  _files.py  _serialization.py  _transport.py  client.py  config.py  exceptions.py  webhooks.py
python/src/docgen/builders/: __init__.py  compose_builder.py  document_builder.py  invoice_builder.py
python/src/docgen/clients/: __init__.py  documents.py  excel.py  fonts.py  pdf_forms.py  pdf_tools.py  preview.py  receipts.py  signatures.py  templates.py  xrechnung.py  zugferd.py
python/src/docgen/models/: __init__.py  content.py  document.py  enums.py  extraction.py  forms.py  invoice.py  jobs.py  markdown.py  media.py  page.py  preview.py  signature.py
skill/: README.md  SKILL.md
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/examples/: async-example.ts  quickstart.ts
typescript/src/: client.ts  config.ts  errors.ts  files.ts  index.ts  transport.ts  webhooks.ts
typescript/src/builders/: compose-builder.ts  document-builder.ts  index.ts  invoice-builder.ts
typescript/src/clients/: documents.ts  excel.ts  fonts.ts  (+9 more)
(+113 files in other folders)
