[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dokmatiq-docgen"
version = "0.1.0"
description = "Python SDK for the Dokmatiq DocGen document generation API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Dokmatiq", email = "info@dokmatiq.com" },
]
keywords = ["document-generation", "pdf", "docx", "invoice", "zugferd", "xrechnung"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.10",
    "respx>=0.22",
]

[project.urls]
Homepage = "https://github.com/dokmatiq/docgen-sdks"
Documentation = "https://docs.dokmatiq.com"
Repository = "https://github.com/dokmatiq/docgen-sdks"

[tool.hatch.build.targets.wheel]
packages = ["src/docgen"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
